Added Example Joins.java